Fix content overflowing issue

--- a/static/layout.css
+++ b/static/layout.css
@@ -71,10 +71,11 @@
 @media only screen and (max-width: 1024px) {
     .layout {
         margin: 1.5rem 1.5rem;
-        height: calc(100vh);
-        width: calc(100vw);
+        height: calc(100vh - 1.5rem * 2);
+        width: calc(100vw - 1.5rem * 2);
         grid-template-columns: 50% 50%;
         grid-template-rows: 8% 8% 84%;
+        overflow: scroll;
     }
 
     .layout .sidebar {
